--- a/index.html
+++ b/index.html
@@ -9,75 +9,56 @@
     <script src="assets/js/index.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="/Users/nickiantosca/Hangman/assets/css/index.css" />
-
 
 </head>
 <body>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4"><h1>Crystal Collector!</h1></div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-6">
-                <ul>
-                    <li>You will be given a random number at the start of the game.</li>
-                    <br>
-                    <li>There are four crystals below. By clicking on a crystal you will add
-                        a specific amound of points to your total score.</li>
-                        <br>
-                    <li>You win the game by matching your total score to the random number, you lose the game if your total score gets above the random number. </li>
-                    <br>
-                    <li>The value of each crystal is hidden from you until you click on it.</li>
-                    <br>
-                    <li>Each time the game starts, the value of each crystal will change.</li>
-                    <br>
-
-
-                </ul>
-            </div>
-        </div>
-
+ <div class="container">
     <div class="row">
-            <div class="col-md-4">
-                <p id= "number">NUMBER</p>
-            </div>
-            <div class="col-md-2" id="tally">
-                <p id="bing">Wins:</p>
-                  <p id="bong">Losses:</p>
-
-            </div>
+        <div class="col-md-4"><h1>Crystal Collector!</h1></div>
     </div>
-        
-<div class="row">
+    <div class="row">
         <div class="col-md-6">
-            <div class="buttons">       
-                <img class="image" id="image1" src="assets/images/gem1.jpg">
-                <img class="image" id="image2" src="assets/images/gem2.jpg">
-                <img class="image" id="image3" src="assets/images/gem3.jpg">
-                <img class="image" id="image4" src="assets/images/gem4.jpg">
-            </div>
+            <ul>
+                <li>You will be given a random number at the start of the game.</li>
+                    <br>
+                <li>There are four crystals below. By clicking on a crystal you will add
+                        a specific amound of points to your total score.</li>
+                    <br>
+                <li>You win the game by matching your total score to the random number, you lose the game if your total score gets above the random number. </li>
+                    <br>
+                <li>The value of each crystal is hidden from you until you click on it.</li>
+                    <br>
+                <li>Each time the game starts, the value of each crystal will change.</li>
+                    <br>
+            </ul>
         </div>
-</div>
-
-<div class="row">
-        <div class="col-md-6">
-            <p id="score">
-                Your Score:
-            </p>
+    </div>
+    <div class="row">
+        <div class="col-md-2">
+            <p id="user">Your Score:</p>
         </div>
-</div>
-
-<div class:"row"
-    <div class="col-md-6">
-        <p id="user">NUMBER</p>
+        <div class="col-md-4">
+            <p id="number">Number:</p>
+        </div>
+        <div class="col-md-2" id="tally">
+            <p id="bing">Wins:</p>
+            <p id="bong">Losses:</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <img class="image" id="image1" src="assets/images/gem1.jpg">
+        </div>
+        <div class="col-md-3">
+            <img class="image" id="image2" src="assets/images/gem2.jpg">
+        </div>
+        <div class="col-md-3">
+            <img class="image" id="image3" src="assets/images/gem3.jpg">
+        </div>
+        <div class="col-md-3">
+            <img class="image" id="image4" src="assets/images/gem4.jpg">
+        </div>
     </div>
 </div>
-
-
-    </div>
-    
 </body>
 </html>
