--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="assets/js/index.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/index.css" />
 
 </head>
 <body>
@@ -32,6 +33,10 @@
                     <br>
             </ul>
         </div>
+        <div class="col-md-2" id="tally">
+                <p id="bing">Wins:</p>
+                <p id="bong">Losses:</p>
+        </div>
     </div>
     <div class="row">
         <div class="col-md-2">
@@ -40,10 +45,10 @@
         <div class="col-md-4">
             <p id="number">Number:</p>
         </div>
-        <div class="col-md-2" id="tally">
+        <!-- <div class="col-md-2" id="tally">
             <p id="bing">Wins:</p>
             <p id="bong">Losses:</p>
-        </div>
+        </div> -->
     </div>
     <div class="row">
         <div class="col-md-3">
